--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   web3dart: ^2.3.5
   web_socket_channel: ^2.2.0
   get: ^4.6.3
+  firebase_core: ^1.17.0
+  cloud_firestore: ^3.1.15
+  firebase_auth: ^3.3.18
 
 dev_dependencies:
   flutter_test:
