--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^1.17.0
   cloud_firestore: ^3.1.15
   firebase_auth: ^3.3.18
+  toggle_switch: ^2.0.1
 
 dev_dependencies:
   flutter_test:
