--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^3.1.15
   firebase_auth: ^3.3.18
   toggle_switch: ^2.0.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
