--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^3.3.18
   toggle_switch: ^2.0.1
   intl: ^0.17.0
+  lottie: ^1.3.0
 
 dev_dependencies:
   flutter_test:
